[tool.poetry]
name = "autogen"
version = "0.7.3"
description = ""
authors = ["Morten B. Rasmussen <m.rasmussen@samsung.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.3.7"
sphinxcontrib-bibtex = "^2.6.2"
kmdo = "1.0.6"
jinja2 = "3.1.5"
docutils = "0.20.1"
breathe = "^4.35.0"
sphinxcontrib-jquery = "^4.1"
pydata-sphinx-theme = "^0.15.2"
sphinx-copybutton = "0.5.2"
sphinx-tabs = "^3.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
