[project]
name = "xnvme-docs"
version = "0.1.0"
description = "Documentation build environment for xNVMe"
requires-python = ">=3.10"

dependencies = [
    "myst-parser>=4.0",
    "sphinx>=8.0,<9.0",
    "sphinx-autobuild>=2024.0",
    "pydata-sphinx-theme>=0.15.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.5",
    "sphinxcontrib-jquery>=4.1",
    "breathe>=4.35.0",
    "jinja2>=3.1.5",
    "pyyaml>=6.0",
    "watchdog>=4.0.0",
]

[project.scripts]
xnvme-docs-build-html = "xnvme_docs:build_html"
xnvme-docs-serve = "xnvme_docs:serve"
xnvme-docs-clean = "xnvme_docs:clean"
xnvme-docs-apigen = "xnvme_docs.apigen:main"
xnvme-docs-toolchain = "xnvme_docs.toolchain:main"
xnvme-docs-dest = "xnvme_docs.dest:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
xnvme_docs = ["templates/*.jinja"]
