# SPDX-FileCopyrightText: Samsung Electronics Co., Ltd
#
# SPDX-License-Identifier: BSD-3-Clause

install_man('xnvme_hello-hw.1')
install_man('xnvme_hello.1')
install_man('xnvme_io_async-read.1')
install_man('xnvme_io_async-write.1')
install_man('xnvme_io_async.1')
install_man('zoned_io_async-append.1')
install_man('zoned_io_async-read.1')
install_man('zoned_io_async-write.1')
install_man('zoned_io_async.1')
install_man('zoned_io_sync-append.1')
install_man('zoned_io_sync-read.1')
install_man('zoned_io_sync-write.1')
install_man('zoned_io_sync.1')