# SPDX-FileCopyrightText: Samsung Electronics Co., Ltd
#
# SPDX-License-Identifier: BSD-3-Clause

install_man('xnvme_tests_async_intf-init_term.1')
install_man('xnvme_tests_async_intf.1')
install_man('xnvme_tests_buf-buf_alloc_free.1')
install_man('xnvme_tests_buf-buf_virt_alloc_free.1')
install_man('xnvme_tests_buf.1')
install_man('xnvme_tests_cli-optional.1')
install_man('xnvme_tests_cli.1')
install_man('xnvme_tests_enum-backend.1')
install_man('xnvme_tests_enum-multi.1')
install_man('xnvme_tests_enum-open.1')
install_man('xnvme_tests_enum.1')
install_man('xnvme_tests_ioworker-verify-sync.1')
install_man('xnvme_tests_ioworker-verify.1')
install_man('xnvme_tests_ioworker.1')
install_man('xnvme_tests_kvs-kvs_io.1')
install_man('xnvme_tests_kvs.1')
install_man('xnvme_tests_lblk-io.1')
install_man('xnvme_tests_lblk-scopy.1')
install_man('xnvme_tests_lblk-write_uncorrectable.1')
install_man('xnvme_tests_lblk-write_zeroes.1')
install_man('xnvme_tests_lblk.1')
install_man('xnvme_tests_map-mem_map_unmap.1')
install_man('xnvme_tests_map.1')
install_man('xnvme_tests_scc-idfy.1')
install_man('xnvme_tests_scc-scopy-msrc.1')
install_man('xnvme_tests_scc-scopy.1')
install_man('xnvme_tests_scc-support.1')
install_man('xnvme_tests_scc.1')
install_man('xnvme_tests_xnvme_cli-check-opt-attr.1')
install_man('xnvme_tests_xnvme_cli-copy-xnvme_cli_run.1')
install_man('xnvme_tests_xnvme_cli.1')
install_man('xnvme_tests_xnvme_file-file-trunc.1')
install_man('xnvme_tests_xnvme_file-write-fsync.1')
install_man('xnvme_tests_xnvme_file.1')
install_man('xnvme_tests_znd_append-verify.1')
install_man('xnvme_tests_znd_append.1')
install_man('xnvme_tests_znd_explicit_open-test_open_zdptr.1')
install_man('xnvme_tests_znd_explicit_open.1')
install_man('xnvme_tests_znd_state-changes.1')
install_man('xnvme_tests_znd_state-transition.1')
install_man('xnvme_tests_znd_state.1')
install_man('xnvme_tests_znd_zrwa-flush-explicit.1')
install_man('xnvme_tests_znd_zrwa-flush-implicit.1')
install_man('xnvme_tests_znd_zrwa-flush.1')
install_man('xnvme_tests_znd_zrwa-idfy.1')
install_man('xnvme_tests_znd_zrwa-open-with-zrwa.1')
install_man('xnvme_tests_znd_zrwa-open-without-zrwa.1')
install_man('xnvme_tests_znd_zrwa-support.1')
install_man('xnvme_tests_znd_zrwa.1')