# SPDX-FileCopyrightText: Samsung Electronics Co., Ltd
#
# SPDX-License-Identifier: BSD-3-Clause

install_man('kvs-delete.1')
install_man('kvs-enum.1')
install_man('kvs-exist.1')
install_man('kvs-idfy-ns.1')
install_man('kvs-list.1')
install_man('kvs-retrieve.1')
install_man('kvs-store.1')
install_man('kvs.1')
install_man('lblk-dir-receive.1')
install_man('lblk-dir-send.1')
install_man('lblk-enum.1')
install_man('lblk-idfy.1')
install_man('lblk-info.1')
install_man('lblk-read.1')
install_man('lblk-write-dir.1')
install_man('lblk-write-uncor.1')
install_man('lblk-write-zeros.1')
install_man('lblk-write.1')
install_man('lblk.1')
install_man('xdd-async.1')
install_man('xdd-sync.1')
install_man('xdd.1')
install_man('xnvme-ctrlr-reset.1')
install_man('xnvme-dsm.1')
install_man('xnvme-enum.1')
install_man('xnvme-fdp-ruhs.1')
install_man('xnvme-fdp-ruhu.1')
install_man('xnvme-feature-get.1')
install_man('xnvme-feature-set.1')
install_man('xnvme-format.1')
install_man('xnvme-idfy-cs.1')
install_man('xnvme-idfy-ctrlr.1')
install_man('xnvme-idfy-ns.1')
install_man('xnvme-idfy.1')
install_man('xnvme-info.1')
install_man('xnvme-library-info.1')
install_man('xnvme-list.1')
install_man('xnvme-log-erri.1')
install_man('xnvme-log-fdp-config.1')
install_man('xnvme-log-fdp-events.1')
install_man('xnvme-log-fdp-stats.1')
install_man('xnvme-log-health.1')
install_man('xnvme-log-ruhu.1')
install_man('xnvme-log.1')
install_man('xnvme-ns-rescan.1')
install_man('xnvme-padc.1')
install_man('xnvme-pioc.1')
install_man('xnvme-sanitize.1')
install_man('xnvme-set-fdp-events.1')
install_man('xnvme-show-regs.1')
install_man('xnvme-subsystem-reset.1')
install_man('xnvme.1')
install_man('xnvme_file-copy-async.1')
install_man('xnvme_file-copy-sync.1')
install_man('xnvme_file-dump-async-iovec.1')
install_man('xnvme_file-dump-async.1')
install_man('xnvme_file-dump-sync-iovec.1')
install_man('xnvme_file-dump-sync.1')
install_man('xnvme_file-load-async.1')
install_man('xnvme_file-load-sync.1')
install_man('xnvme_file-write-read.1')
install_man('xnvme_file.1')
install_man('zoned-append.1')
install_man('zoned-changes.1')
install_man('zoned-enum.1')
install_man('zoned-errors.1')
install_man('zoned-idfy-ctrlr.1')
install_man('zoned-idfy-ns.1')
install_man('zoned-info.1')
install_man('zoned-mgmt-close.1')
install_man('zoned-mgmt-finish.1')
install_man('zoned-mgmt-open.1')
install_man('zoned-mgmt-reset.1')
install_man('zoned-mgmt.1')
install_man('zoned-read.1')
install_man('zoned-report.1')
install_man('zoned-write.1')
install_man('zoned.1')