[package]
name = "xnvme-sys"
version = "0.7.3"
edition = "2021"
description = "Raw/direct/unsafe bindings to the xNVMe C Library."
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
system-deps = "6"
bindgen = "0.63.0"

[package.metadata.system-deps]
xnvme = "0.7.3"
