install_data('lblk-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('nvmec-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xdd-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_file-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_hello-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_io_async-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_async_intf-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_buf-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_cli-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_enum-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_ioworker-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_lblk-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_scc-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_xnvme_file-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_xnvmec-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_znd_append-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_znd_explicit_open-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_znd_state-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('xnvme_tests_znd_zrwa-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('zoned-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('zoned_io_async-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))
install_data('zoned_io_sync-completions', install_dir: bash_completion_dep.get_variable('completionsdir'))