[bdist_wheel]
universal = 1

[metadata]
name = cijoe-pkg-xnvme
version = attr: cijoe.xnvme.__version__
author = Simon A. F. Lund
author_email = os@safl.dk
maintainer = Simon A. F. Lund
maintainer_email = os@safl.dk
description = A loosely coupled approach to systems development and testing"
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
url = "https://github.com/refenv/cijoe-pkg-xnvme/"

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Framework :: Pytest
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Topic :: Software Development :: Testing
  Topic :: Software Development
  Topic :: Text Processing
  Topic :: Utilities

project_urls=
  homepage = https://cijoe.readthedocs.io/
  documentation = https://cijoe.readthedocs.io/
  repository = https://github.com/refenv/cijoe
  changelog = https://github.com/refenv/cijoe/blob/main/CHANGELOG.md

[options]
requires_python = >=3.9
setup_requires =
  wheel
install_requires =
  cijoe==0.9.17
  cijoe-pkg-qemu @ git+https://github.com/refenv/cijoe-pkg-qemu.git@main
  cijoe-pkg-linux @ git+https://github.com/refenv/cijoe-pkg-linux.git@main
  cijoe-pkg-fio @ git+https://github.com/refenv/cijoe-pkg-fio.git@main

zip_safe = False
packages = find_namespace:
package_dir =
  = src

[options.packages.find]
where = src

[options.package_data]
* = *.html, *.config, *.perfreq, *.toml, *.yaml, *.workflow, *.config
